--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 
 /* Header */
 header {
-    position: fixed;
+    position: relative;
     width: 100%;
     background-color: rgba(239, 124, 142, 0.95);
     display: flex;
